// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`jsonc.md - markdown-verify 1`] = `
\`\`\`jsonc
   // comment
{
     "foo"   :    "bar"
}
\`\`\`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\`\`\`jsonc
// comment
{
  "foo": "bar"
}
\`\`\`

`;

exports[`trailing_comma.md - markdown-verify 1`] = `
\`\`\`json
{
  "foo": "bar"
}
\`\`\`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\`\`\`json
{
  "foo": "bar"
}
\`\`\`

`;
